--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-partials": "^0.3.0",
+    "express-session": "^1.15.5",
     "marked": "^0.3.6",
     "morgan": "~1.8.1",
     "mysql2": "^1.4.2",
